force-app/main/default/objects/Bypassed_Trigger__mdt/Bypassed_Trigger__mdt.object-meta.xml
<CustomObject>
    <label>Bypassed Trigger</label>
    <pluralLabel>Bypassed Triggers</pluralLabel>
</CustomObject>