force-app/main/default/objects/Bypassed_Trigger__mdt/fields/DML_Event__c.field-meta.xml
<CustomField>
    <fullName>DML_Event__c</fullName>
    <label>DML Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>beforeInsert</fullName>
                <default>true</default>
                <label>beforeInsert</label>
            </value>
            <value>
                <fullName>beforeUpdate</fullName>
            </value>
            <value>
                <fullName>beforeDelete</fullName>
            </value>
            <value>
                <fullName>afterInsert</fullName>
            </value>
            <value>
                <fullName>afterUpdate</fullName>
            </value>
            <value>
                <fullName>afterDele</fullName>
            </value>
            <value>
                <fullName>afterUndele</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>