force-app/main/default/objects/Bypassed_Trigger__mdt/fields/Muted_Automation__c.field-meta.xml
<CustomField>
    <fullName>Muted_Automation__c</fullName>
    <label>Object</label>
    <referenceTo>Bypassed_Automation__mdt</referenceTo>
    <relationshipLabel>Bypassed Triggers</relationshipLabel>
    <relationshipName>Muted_Triggers</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>