force-app/main/default/objects/Bypassed_Trigger__mdt/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>